tests/functional/lang/eval-fail-derivation-structuredAttrs-stack-overflow.err.exp
error:
       … while evaluating the attribute 'outPath'
         at «nix-internal»/derivation-internal.nix:56:7:
           55|     value = commonAttrs // {
           56|       outPath = strict.${outputName};
             |       ^
           57|       inherit outputName;

       … while calling the 'derivationStrict' builtin
         at «nix-internal»/derivation-internal.nix:41:12:
           40|
           41|   strict = derivationStrict drvAttrs;
             |            ^
           42|

       … while evaluating derivation 'test'
         whose name attribute is located at /pwd/lang/eval-fail-derivation-structuredAttrs-stack-overflow.nix:5:3

       … while evaluating attribute 'nested' of derivation 'test'
         at /pwd/lang/eval-fail-derivation-structuredAttrs-stack-overflow.nix:9:3:
            8|   __structuredAttrs = true;
            9|   nested =
             |   ^
           10|     let

       … while evaluating attribute 'tail'
         at /pwd/lang/eval-fail-derivation-structuredAttrs-stack-overflow.nix:12:71:
           11|       long = builtins.genList (x: x) 100000;
           12|       reverseLinkedList = builtins.foldl' (tail: head: { inherit head tail; }) null long;
             |                                                                       ^
           13|     in

       (9995 duplicate frames omitted)

       … while evaluating attribute 'head'
         at /pwd/lang/eval-fail-derivation-structuredAttrs-stack-overflow.nix:12:66:
           11|       long = builtins.genList (x: x) 100000;
           12|       reverseLinkedList = builtins.foldl' (tail: head: { inherit head tail; }) null long;
             |                                                                  ^
           13|     in

       error: stack overflow; max-call-depth exceeded
       at /pwd/lang/eval-fail-derivation-structuredAttrs-stack-overflow.nix:12:66:
           11|       long = builtins.genList (x: x) 100000;
           12|       reverseLinkedList = builtins.foldl' (tail: head: { inherit head tail; }) null long;
             |                                                                  ^
           13|     in
